crates/taut-rpc-macros/tests/ui/validate-on-union-fail.stderr
error: taut_rpc: unions are not supported by #[derive(Validate)]
         see SPEC §7
 --> tests/ui/validate-on-union-fail.rs:3:1
  |
3 | union U { a: u32, b: f32 }
  | ^^^^^
