crates/taut-rpc-macros/tests/ui/validate-on-union-fail.rs
use taut_rpc::Validate;
#[derive(Validate)]
union U { a: u32, b: f32 }
fn main() {}
